--- a/src/assets/styles/components/Navbar.css
+++ b/src/assets/styles/components/Navbar.css
@@ -1,7 +1,10 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
-.navbar2 {
+.navbarr {
   background-color: #fe4236;
+  height: 10vh;
+  display :flex;
+  align-items: center;
 }
 .buttons {
   font-family: 'Montserrat';
