--- a/src/assets/styles/components/HomePage.css
+++ b/src/assets/styles/components/HomePage.css
@@ -1,2 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
 
+.container-house{
+    margin-top: 10vh;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.locura{
+ margin: 2vh auto;
+    width: 400px;
+}
+.button-margin{
+    margin-top: 2rem;
+    
+}
