--- a/src/assets/styles/components/HomePage.css
+++ b/src/assets/styles/components/HomePage.css
@@ -2,7 +2,6 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
 
 .container-house{
-    margin-top: 10vh;
     display: flex;
     flex-wrap: wrap;
 
@@ -14,5 +13,10 @@
 }
 .button-margin{
     margin-top: 2rem;
+    
+}
+.centrado{
+    justify-content: center;
+    display:flex
     
 }
