--- a/src/assets/styles/components/HomePage.css
+++ b/src/assets/styles/components/HomePage.css
@@ -1,22 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
 
-.container-house{
-    display: flex;
-    flex-wrap: wrap;
-
+.container-house {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.locura{
- margin: 2vh auto;
-    width: 400px;
+.locura {
+  margin: 2vh auto;
+  width: 400px;
 }
-.button-margin{
-    margin-top: 2rem;
-    
+.button-margin {
+  margin-top: 2rem;
 }
-.centrado{
-    justify-content: center;
-    display:flex
-    
+.centrado {
+  justify-content: center;
+  display: flex;
+}
+.m-btn-filter {
+  margin: 22px 0 19px 17px;
+}
+.m-btn-filterprice {
+  margin-top: 20px;
+}
+.m-btn-homepage-admin {
+  margin: 5px 5px 5px 5px;
 }
