--- a/src/assets/styles/components/Register.css
+++ b/src/assets/styles/components/Register.css
@@ -1,4 +1,4 @@
-
+/* 
 
   @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
@@ -120,4 +120,4 @@ body {
         font-size: 1.8rem;
     }
 
-}
+} */
