--- a/src/assets/styles/components/HomePage.css
+++ b/src/assets/styles/components/HomePage.css
@@ -1,9 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
 
 .container-house {
   display: flex;
   flex-wrap: wrap;
+  background-color: blue;
 }
 
 .locura {
@@ -26,3 +27,4 @@
 .m-btn-homepage-admin {
   margin: 5px 5px 5px 5px;
 }
+ */
