--- a/src/assets/styles/components/Navbar.css
+++ b/src/assets/styles/components/Navbar.css
@@ -1,4 +1,4 @@
-@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
+/* @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 .navbarr {
   background-color: #fe4236;
@@ -26,3 +26,4 @@ li{
 li a{
   color: white;
 }
+ */
