--- a/src/assets/styles/components/PropertiesCreated.css
+++ b/src/assets/styles/components/PropertiesCreated.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -22,3 +22,4 @@ h1{
     box-shadow: 0 5px 10px -5px rgb(0 0 0 / 30%);
     text-align: center;
 }
+ */
