--- a/src/assets/styles/components/User.css
+++ b/src/assets/styles/components/User.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css);
 
 
@@ -14,4 +14,4 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-}
+} */
